<resources>
    <string name="app_name">LinkDatingApp</string>
    <string name="create_username">Create Username</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="age_prompt">How old are you?</string>
    <string name="age">Age</string>
    <string name="spinner_prompt">college</string>
    <string name="tell_us_about_yourself">Tell us about yourself...</string>
    <string-array name="colleges_array">
        <item>Alabama State University</item>
        <item>Bowie State University</item>
        <item>Hampton University</item>
        <item>Howard University</item>
        <item>Morehouse College</item>
        <item>Morgan State University</item>
        <item>Norfolk State University</item>
        <item>North Carolina A&amp;T State University</item>
        <item>North Carolina Central University</item>
        <item>Tennessee State University</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Sign Out</string>

</resources>